Fix header layout bug in Chrome.

--- a/app/assets/stylesheets/base/_base.css.scss
+++ b/app/assets/stylesheets/base/_base.css.scss
@@ -21,18 +21,23 @@ header {
   div.header-content {
     padding: 0 10px;
 
-    img.logo {
-      $border: 1px solid darken($bg-color, 8%);
-      @include background-image(linear-gradient(rgba(255,255,255, 1),rgba(255,255,255, 0.3)));
-      border-left: $border;
-      border-right: $border;
-      @include box-shadow(-1px 0 0 #fff, 1px 0 0 #fff);
-      margin: 0;
-      margin-bottom: -3px;
-      padding: 12px;
 
-      &:hover {
-        background: #fff;
+    a.logo {
+      float: left;
+
+      img {
+        $border: 1px solid darken($bg-color, 8%);
+        @include background-image(linear-gradient(rgba(255,255,255, 1),rgba(255,255,255, 0.3)));
+        border-left: $border;
+        border-right: $border;
+        @include box-shadow(-1px 0 0 #fff, 1px 0 0 #fff);
+        margin: 0;
+        margin-bottom: -3px;
+        padding: 12px;
+
+        &:hover {
+          background: #fff;
+        }
       }
     }
 
